--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;900&family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/phone.css">
+    <link rel="stylesheet" href="./styles/phone.css">
     <title>Calculadora Multifuncional | Curso Practico JS - Platzi</title>
 </head>
 <body class="menu-body menu-global-body">
