--- a/pages/figuras_cuadrados.html
+++ b/pages/figuras_cuadrados.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/phone.css">
     <title>Calculadora Multifuncional | Curso Practico JS - Platzi</title>
 </head>
-<body class="menu-body menu-global-body" onload="eraseCookie(last)">
+<body class="menu-body menu-global-body" onload="eraseCookie(last), carga()">
     <div id="loader-container">
         <div>
             <div id="loader"></div>
@@ -29,7 +29,7 @@
         <form id="form">
             <section>
                 <label class="form-label" for="medida">Lados (cm)</label>
-                <div class="form-input">
+                <div id="input" class="form-input">
                     <input id="medida" type="number">
                     <p>cm</p>
                 </div>
@@ -41,8 +41,8 @@
         </div>
         <section>
             <label class="form-label" for="res" id="resTitle">Resultado</label>
-                <div class="form-input">
-                    <input id="res" type="number">
+                <div class="form-input-res">
+                    <input id="res" type="number" readonly>
                     <p id="cmRes">cm</p>
                 </div>
                 <button id="but3" class="buttons formButton" onClick="restart()" disabled="true">Reiniciar</button>
@@ -65,7 +65,7 @@
         </div>
     </footer>
     <script src="../scripts/global.js"></script>
-    <script src="../scripts/figuras.js"></script>
+    <script src="../scripts/cuadrados.js"></script>
     <script src="https://kit.fontawesome.com/2ec14f6702.js" crossorigin="anonymous"></script>
 </body>
 </html>
