--- a/pages/figuras_triangulos.html
+++ b/pages/figuras_triangulos.html
@@ -31,47 +31,47 @@
         <section>
             <h1 class="main-title">Triángulos</h1>
         </section>
-        <form class="triangle-form">
+        <form id="form" class="triangle-form">
             <section>
-                <label class="form-label" for="lado">Lado #1 (cm)</label>
-                <div class="form-input triangle-input">
-                    <input id="lado" type="number">
+                <label class="form-label" for="medida1">Lado #1 (cm)</label>
+                <div id="input1" class="form-input triangle-input">
+                    <input id="medida1" type="number">
                     <p>cm</p>
                 </div>
             </section>
             <section>
-                <label class="form-label" for="lado">Lado #2 (cm)</label>
-                <div class="form-input triangle-input">
-                    <input id="lado" type="number">
+                <label class="form-label" for="medida2">Lado #2 (cm)</label>
+                <div id="input2" class="form-input triangle-input">
+                    <input id="medida2" type="number">
                     <p>cm</p>
                 </div>
             </section>
             <section>
-                <label class="form-label" for="lado">Base (cm)</label>
-                <div class="form-input triangle-input">
-                    <input id="lado" type="number">
+                <label class="form-label" for="medida3">Base (cm)</label>
+                <div id="input3" class="form-input triangle-input">
+                    <input id="medida3" type="number">
                     <p>cm</p>
                 </div>
             </section>
             <section>
-                <label class="form-label" for="lado">Altura (cm)</label>
-                <div class="form-input triangle-input">
-                    <input id="lado" type="number">
+                <label class="form-label" for="medida4">Altura (cm)</label>
+                <div id="input4" class="form-input triangle-input">
+                    <input id="medida4" type="number">
                     <p>cm</p>
                 </div>
             </section>
         </form>
         <div class="buttons-container">
-            <button class="buttons doubleButton" onClick="">Área</button>
-            <button class="buttons doubleButton" onClick="">Perímetro</button>
+            <button id="but1" class="buttons doubleButton" onClick="calcularAreaTriangulo()">Área</button>
+            <button id="but2" class="buttons doubleButton" onClick="calcularPerimetroTriangulo()">Perímetro</button>
         </div>
         <section>
-            <label class="form-label" for="lado">Resultado</label>
-                <div class="form-input">
-                    <input id="lado" type="number">
-                    <p>cm</p>
+            <label class="form-label" for="res" id="resTitle">Resultado</label>
+                <div class="form-input-res">
+                    <input id="res" type="number" readonly>
+                    <p id="cmRes">cm</p>
                 </div>
-                <button class="buttons buttonsIsos" onClick="">Reiniciar</button>
+                <button id="but3" class="buttons formButton" onClick="restartTriangles()">Reiniciar</button>
         </section>
     </main>
     <footer>
@@ -91,6 +91,7 @@
         </div>
     </footer>
     <script src="../scripts/global.js"></script>
+    <script src="../scripts/triangulos.js"></script>
     <script src="https://kit.fontawesome.com/2ec14f6702.js" crossorigin="anonymous"></script>
 </body>
 </html>
